--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-gallery/core": "^4.0.1",
     "@ngx-gallery/gallerize": "^4.0.1",
     "@ngx-gallery/lightbox": "^4.0.3",
+    "@zeit/ng-deploy": "^0.3.0",
     "hammerjs": "^2.0.8",
     "mapbox-gl": "^1.6.1",
     "rxjs": "~6.4.0",
